--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     stdin_open: true
     tty: true
     build: .
-    command: bash -c "chmod +x wait-for-it/wait-for-it.sh && wait-for-it/wait-for-it.sh db:5432 && rm -f tmp/pids/server.pid && rake db:create && rake db:migrate && rake db:seed && bundle exec rails s -p 3000 -b '0.0.0.0'"
+    command: bash -c "rm -f tmp/pids/server.pid && rake db:create && rake db:migrate && rake db:seed && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
       - .:/myapp
     depends_on:
